fix book covers on other detail pages (bookcollection)

--- a/bookcollection/static/bookcollection/style.css
+++ b/bookcollection/static/bookcollection/style.css
@@ -62,7 +62,7 @@ p a {
 }
 
 .small-listing img {
-    height: auto;
+    height: 150px;
     width: 105px;
     float: left;
     margin-bottom: 20px;
